--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,40 @@
-body {
+* {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+  background-color: #24252A;
+  height: 100vh;
+  
+}
+
+.interface{
+  max-width: 1280px;
+  margin: 0 auto;
+}
+
+
+li,a{
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  color: #edf0f1;
+  text-decoration: none;
+}
+.btn-contato button{
+  font-family: "Montserrat", sans-serif;
+  padding: 10px 40px;
+  padding-top: 10px;
+  font-size: 18px;
+  font-weight: 600;
+  background-color: #0088a9 ;
+  border: 0;
+  border-radius: 30px;
+  cursor: pointer;
+}
+.flex{
+  display: flex;
 }
